@@ -59,14 +59,16 @@ module ActionController #:nodoc:
 
       # Overwrite to implement custom logging of errors. By default logs as fatal.
       def log_error(exception) #:doc:
-        if ActionView::TemplateError === exception
-          logger.fatal(exception.to_s)
-        else
-          logger.fatal(
-            "\n\n#{exception.class} (#{exception.message}):\n    " +
-            clean_backtrace(exception).join("\n    ") +
-            "\n\n"
-          )
+        ActiveSupport::Deprecation.silence do
+          if ActionView::TemplateError === exception
+            logger.fatal(exception.to_s)
+          else
+            logger.fatal(
+              "\n\n#{exception.class} (#{exception.message}):\n    " +
+              clean_backtrace(exception).join("\n    ") +
+              "\n\n"
+            )
+          end
         end
       end
 
